<resources>
    <string name="app_name">Calculator</string>
    <string name="placeholderNumber">0</string>
    <string name="placeholderButton">Button</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="ButtonC">C</string>
    <string name="ButtonLeft">(</string>
    <string name="ButtonRight">)</string>
    <string name="ButtonPow">^</string>
    <string name="ButtonPlus">+</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="ButtonMinus">-</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="ButtonMul">*</string>
    <string name="ButtonDot">.</string>
    <string name="Button0">0</string>
    <string name="ButtonPow10">*10^</string>
    <string name="ButtonSolve">=</string>
    <string name="ButtonDiv">/</string>
    <string name="ErrorString">Error</string>
</resources>
