<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/resultBackground"
        android:hint="@string/placeholderNumber"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/ButtonLeft"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/ButtonRight"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/ButtonPow"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/operationBackground"
            android:text="@string/ButtonPlus"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button3"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button41"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/operationBackground"
            android:text="@string/ButtonMinus"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button5"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/operationBackground"
            android:text="@string/ButtonMul"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button7"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button8"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button33"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button9"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button43"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/operationBackground"
            android:text="@string/ButtonDiv"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/ButtonDot"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/Button0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button34"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/numberBackground"
            android:text="@string/ButtonPow10"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button44"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/operation2Background"
            android:text="@string/ButtonSolve"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>